Adding all files

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,84 @@
-.App {
+#navbar-items {
+  display: flex;
+  justify-content: space-between;
+  background: black;
+  padding: 0.5rem;
+  align-items: center;
+  margin: -10px;
+  margin-bottom: 15px;
+  
+
+}
+
+.fixed-link{
+  text-decoration: none;
+  color: white;
+  cursor: pointer;
+}
+
+.fixed-link:hover{
+  color: skyblue;
+}
+
+#home-btn {
+  margin-left: auto;
+}
+
+#contact-btn{
+  margin-right: auto;
+}
+
+.empty-space{
+  width: 25%;
+}
+
+.center{
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#home-wrapper{
+  margin: 3%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#nemer-pic {
+  border-radius: 50%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.too-big {
+  max-width: 30%;
+  max-height: 10%;
+}
+
+#img-wrapper{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-around;
+  margin-top: 15px;
 }
 
-.App-link {
-  color: #61dafb;
+#switzerland{
+  transition: transform .2s;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#boba {
+  transition: transform .2s;
 }
+
+#table-tennis{
+  transition: transform .2s;
+}
+
+#switzerland:hover {
+  transform: scale(1.5);
+}
+
+#table-tennis:hover{
+  transform: scale(1.5);
+}
+
+#boba:hover{
+  transform: scale(1.5);
+}
+
